# nrel-openstudio

./: .gitattributes  .gitignore  CMakeLists.txt  Jenkinsfile_develop_code_coverage  Jenkinsfile_develop_osx  Jenkinsfile_develop_ubuntu_2204  Jenkinsfile_develop_ubuntu_2404  Jenkinsfile_develop_windows  ProjectMacros.cmake  conanfile.py
.github/workflows/: README.md  build-and-test-ubuntu.yml  buildCSharp.yml  cppcheck.yml  incremental-build-legacy.yml  incremental-build.yml  mac.yml  python_bindings.yml  windows.yml
dependencies/: cpprestsdk_char_traits_workaround.hpp
developer/ruby/: FindMissingSWIGTypes.rb
python/: requirements.txt
python/engine/: PythonEngine.cpp  PythonEngine.hpp
python/test/: test_swigjson.py
resources/: CMakeLists.txt
resources/energyplus/: NewFileTemplate.idf  ProposedEnergy+.idd
resources/model/: OpenStudio.idd
ruby/bindings/: InitRubyBindings.cpp
ruby/engine/: RubyEngine.cpp  RubyEngine.hpp  embedded_help.rb
ruby/test/: CMakeLists.txt  SwigJson_Test.rb
src/alfalfa/: Alfalfa.i
src/cli/: CMakeLists.txt  MeasureManager.cpp  MeasureManager.hpp
src/energyplus/: CMakeLists.txt  ForwardTranslator.cpp  ForwardTranslator.hpp  ReverseTranslator.cpp  ReverseTranslator.hpp
src/lib/: CMakeLists.txt
src/measure/: Measure.i  ModelicaMeasure.cpp  ModelicaMeasure.hpp  OSArgument.cpp  OSRunner.cpp  OSRunner.hpp  ReportingMeasure.cpp  ReportingMeasure.hpp
src/model/: AirConditionerVariableRefrigerantFlow.cpp  AirflowNetworkEquivalentDuct.cpp  (+115 more)
src/modelica/: Builder.hpp  CMakeLists.txt  ModelicaFile.cpp  ModelicaFile.hpp  main.cpp
(+220 files in other folders)
